Refactor genetic evolution process and add match statistics collection